# fastcrawl

./: .gitignore  README.md  pyproject.toml  tmp.py
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yml  lint-and-test.yml  lint.yml  main-branch-ci.yml  publish-coverage-report.yaml  publish-coverage-report.yml  publish-release.yml  pull-request-ci.yml
examples/: basic_crawling.py  filter_duplicates_pipeline.py  title_crawler.py
fastcrawl/: __init__.py  base_crawler.py  base_pipeline.py  cli.py  crawler.py  types.py  types_.py
fastcrawl/core/: __init__.py  app.py  base_crawler.py  component.py  crawl_base.py  type_validation.py
fastcrawl/models/: __init__.py  app_settings.py  crawler_config.py  crawler_settings.py  crawler_stats.py  http_client_settings.py  http_settings.py  log_settings.py  request.py  response.py  settings.py
fastcrawl/pipelines/: base_pipeline.py
scripts/: format.sh  lint.sh  test.sh
tests/: mocks.py  test_base_crawler.py  test_base_pipeline.py  utils.py
tests/core/: test_app.py
tests/models/: test_crawler_stats.py  test_request.py  test_response.py
tests/utils/: test_log.py
