[tool.poetry]
name = "fastcrawl"
version = "0.1.0"
description = "Fast and asynchronous web crawling and scraping library for Python."
authors = ["ilarionkuleshov <ilarion.kuleshov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
